--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   --title-color: #a55c30;
   --text-color: #19314b;
   --color-white: #fff;
+  --color-p-tag: rgba(35, 34, 34, 0.96);
 }
 
 /***** Font variable *****/
@@ -92,7 +93,8 @@ section {
 .nav-primary,
 .hero,
 .about__container,
-.services__container {
+.services__container,
+.fleet__container {
   max-width: 1190px;
   margin-inline: auto;
 }
@@ -260,3 +262,77 @@ section {
 }
 
 /* ====== Fleet Section ===== */
+.fleet {
+  margin: 80px 0 50px 0;
+}
+
+.fleet__cards {
+  display: flex;
+  align-items: center;
+  margin-inline: auto;
+}
+
+.fleet__container-title {
+  font-size: 56px;
+  font-weight: 700;
+  text-align: center;
+  padding-bottom: 64px;
+}
+
+.fleet__card {
+  max-width: 378px;
+  height: 468px;
+  background: var(--color-white);
+  box-shadow: 4px 10px 30px 0px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.fleet__card-content__heading {
+  text-align: center;
+  padding-bottom: 22px;
+}
+
+.fleet__card-content__title {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.fleet__card-content__sub {
+  color: var(--color-p-tag);
+  font-family: var(--font-family-nunito);
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.fleet__card-content__description {
+  color: var(--color-p-tag);
+  font-family: var(--font-family-nunito);
+  font-size: 12px;
+  font-weight: 400;
+  max-width: 304px;
+  height: 99px;
+}
+
+.fleet__card-icons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.fleet__card-icons i {
+  color: var(--color-secondary);
+  width: 24px;
+  height: 24px;
+  font-size: 1.5rem;
+}
+
+.fleet__card-icon__text {
+  color: var(--color-p-tag);
+  font-family: var(--font-family-nunito);
+  font-size: 14px;
+  font-weight: 400;
+  display: inline-block;
+}
